# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  notes.txt  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-2f1c253bc5167b0ccc6d7e3b9c86e55f71cecd7406d14d60ddadf5c468122581.json  query-612366ff0f16e45f79f0e8001cf96c64f7cd125b49cf6baf296626f2808bf196.json  query-83d06ffdc2b077817a391daf5541b019e068124701c5295cdc8edef9c59545b4.json  query-a0b75d8b10192462b6a74c196a68ec72d7fe43544e5c3ffaab4baed121713859.json  query-cd0548aecbe75be70d58a04d931fc404cb59a27fa20013a98ec873f1c549b889.json  query-d146036e7fa8708333b22e7c4fc34e8f6c3da240c1bb1db0d313f10ed9a447a2.json
configuration/: base.yaml  production.yaml
migrations/: 20240308053619_create_subscriptions_table.sql  20240312121653_make_status_not_null_in_subscriptions.sql  20240312122302_create_subscription_tokens_table.sql  20240323044850_seed_user.sql  20240326075355_create_idempotency_table.sql
scripts/: fix_ssh.sh  init_db.sh  init_redis.sh  reset_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscription_token.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
